--- a/workflow.html
+++ b/workflow.html
@@ -8,9 +8,13 @@
 
     <!-- Inline CSS -->
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
         body {
             background-color: #F3F9FF;
-            margin: 0;
         }
 
         .container {
@@ -21,16 +25,21 @@
             font-family: sans-serif;
             background-color: #243F67;
             color: white;
-            width: 20%;
+            width: 26%;
             height: 100vh;
             text-align: center;
+            position: relative;
 
-            transition: 0.4s;
+            transition: 0.4s ease;
         }
 
         .sidebar h2 {
-            font-size: 3vh;
-            padding: 40px;
+            font-size: 40px;
+            /* padding: 40px; */
+            padding-top: 40px;
+            padding-bottom: 70px;
+            font-weight: bold;
+            line-height: 40px;
         }
 
         .sidebar ul li {
@@ -42,14 +51,35 @@
         .sidebar ul li a {
             line-height: 50px;
             color: white;
-            display: flex;
+            display: block;
+            font-size: 30px;
+            letter-spacing: 1px;
+            position: relative;
+            transition: 0.3s;
+            overflow: hidden;
+            text-align: left;
+            padding-left: 80px;
+            padding-bottom: 10px;
+            /* display: flex;
             flex-direction: column;
             justify-content: center;
             text-decoration: none;
-            font-size: 25px;
+            font-size: 20px;
             text-align: left;
-            padding-left: 20px;
+            padding-left: 20px; */
         }
+
+        /* .sidebar ul li:hover a {
+            padding-left: 60px;
+            color: green;
+        } */
+
+        .sidebar ul a img {
+            margin-right: 12px;
+            width: 25px;
+            height: 25px;
+        }
+
 
         /* PAGE */
         .page {
@@ -108,15 +138,26 @@
     <div class="container">
 
             <!-- SIDEBAR -->
-            <div class="sidebar">
+            <nav class="sidebar">
                 <h2>Workflow Machine</h2>
                 <ul>
-                    <li><a href="#">calendar</a></li>
-                    <li><a href="#">notes</a></li>
-                    <li><a href="#">tasks</a></li>
-                    <li><a href="#">spreadsheet</a></li>
+                    <li>
+                        <a href="#"><img src="./img/bxs_calendar.png" alt="calendar">calendar</a>
+                    </li>
+
+                    <li>
+                        <a href="#"><img src="./img/charm_notes-tick.png" alt="notes">notes</a>
+                    </li>
+
+                    <li>
+                        <a href="#"><img src="./img/clarity_tasks-line.png" alt="tasks">tasks</a>
+                    </li>
+
+                    <li>
+                        <a href="#"><img src="./img/bi_file-earmark-spreadsheet.png" alt="spreadsheet">spreadsheet</a>
+                    </li>
                 </ul>
-            </div>
+            </nav>
 
             <!-- PAGE -->
             <div class="page">
